Bug 705014: ICC Profile mismatch

gxdso_skip_icc_component_validation should by default
return false. We should always check the components
unless a device is able to handle such a mismatch.